2008-11-12  Jonathan Pryor <jpryor@novell.com>

	* Resources/defaulttemplate.xsl: Update /html/head/meta/@content value
	  so that IE7 properly recognizes the file as UTF-8 encoded.
	  Fixes #444009.

2008-10-27  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Fix build error caused by filenames containing '`'.

2008-10-27  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/mdoc.cs: TraceLevel.Error messages should go to
	  Console.Error, as per Unix convention.
	* Makefile: cehck-mdoc-validate* needs to also capture standard error.

2008-10-27  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/validate.cs: Remove warnings
	* Test/validate.check.monodocer, Test/validate.check.monodocer.since:
	  Don't generate output if no errors are found.
	* Test/validate.check.monodocer.importslashdoc: Prefix error messages
	  with "mdoc:", as per Unix convention.

2008-10-24  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Fixup mdoc.exe dependencies so that it's rebuilt if the
	  resources or monodoc.dll change.  Add tests for mdoc-validate.
	* Mono.Documentation/assembler.cs, Mono.Documentation/mdoc.cs,
	  Mono.Documentation/monodocer.cs, Mono.Documentation/monodocs2html.cs,
	  Mono.Documentation/monodocs2slashdoc.cs,
	  Mono.Documentation/validate.cs: 
	  - Major rearchitecture; instead of having the option parsing 
	    centralized within mdoc.cs, keep option parsing within the relevant 
	    files/types.
	  - Introduce the MDocCommand abstract class to serve as the base class 
	    -- primarily done to introduce the new Message() and Error() 
	    methods, in which Message() will only show the message if the 
	    current message level is >= the message's level (thus minimizing 
	    console spew); see ../monodoc for more details.
	  - Add `-v' ("verbose") top-level argument to allow setting/adding 
	    levels, so that `mdoc -v -v assemble ...` will show *all*
	    assemble-associated messages (which can be quite voluminous).