@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Mono.DocTest.Generic.MyList&lt;A,B&gt;</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style>
       a { text-decoration: none }
 
