@@ -1,3 +1,9 @@
+2008-11-13  Jonathan Pryor <jpryor@novell.com>
+
+	* Test/html.expected/**: Update 
+	  //meta[@http-equiv='Content-Type']/@content attribute value (changed
+	  due to yesterday's defaulttemplate.xsl fix).
+
 2008-11-12  Jonathan Pryor <jpryor@novell.com>
 
 	* Resources/defaulttemplate.xsl: Update /html/head/meta/@content value
